fix(css): add minus z-index for spinner, also add gif for spinner

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,4 +5,5 @@ tr.htmx-swapping td {
 .htmx-indicator {
     position: absolute;
     top: 25vh;
+    z-index: -1;
 }
